<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.unisinos.barnadsv.dpa_1_app.FirstActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/nomeCompletoHint"
                android:maxLines="1">

                <requestFocus />
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tilNomeCompleto"
            android:layout_alignStart="@+id/tilNomeCompleto"
            android:layout_below="@+id/tilNomeCompleto"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/dataNascimentoHint" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvSexoSpinner"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilDataNascimento"
            android:layout_marginTop="10dp"
            android:text="@string/sexoHint" />

        <Spinner
            android:id="@+id/spSexo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilDataNascimento"
            android:layout_marginTop="33dp"
            android:hint="@string/sexoHint" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilProfissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tilNomeCompleto"
            android:layout_alignStart="@+id/tilNomeCompleto"
            android:layout_below="@+id/spSexo"
            android:layout_marginTop="12dp">

            <AutoCompleteTextView
                android:id="@+id/actvProfissao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="5"
                android:hint="@string/profissaoHint" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvEstadoCivilSpinner"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilProfissao"
            android:layout_marginTop="12dp"
            android:text="@string/estadoCivilHint" />

        <Spinner
            android:id="@+id/spEstadoCivil"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estadoCivilHint"
            android:layout_below="@+id/tvEstadoCivilSpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spEstadoCivil"
            android:layout_marginTop="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/senhaHint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilSenha"
            android:layout_marginTop="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtConfirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/confirmaSenhaHint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilConfirmaSenha"
            android:layout_centerHorizontal="true"
            android:text="Confirmar Dados" />

    </RelativeLayout>

</ScrollView>

